--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "mongoose": "^7.4.1",
+        "multer": "*",
         "passport": "^0.6.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^8.0.0"
     }
