--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
-      "heroku-prebuild": "cd server && npm install"
+      "heroku-prebuild": "cd server && npm install",
+      "start": "node server.js"
     }
   }
